sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: value i
    setValeur(i-j+1,v)
              ^